--- a/src/components/react/react.module.scss
+++ b/src/components/react/react.module.scss
@@ -7,3 +7,28 @@
     width: 50%;
   }
 }
+
+
+
+.cambio_fondo {
+  filter: drop-shadow(0px 0px 1em #61dafbaa);
+  border:  1px solid #61dafbaa;
+} 
+.cambio_fondo_2 {
+  filter: drop-shadow(0px 0px 1em #ec5151aa);
+  border:  1px solid #ec5151aa;
+
+
+} 
+.segundo_cambio {
+ background-color: #94cc9d2f;
+} 
+
+
+.btn_react {
+  background-color: blue;
+  width: max-content;
+  padding: 4px 10px;
+  border-radius: 6px;
+  outline: none;
+}
