--- a/src/components/react/react.module.scss
+++ b/src/components/react/react.module.scss
@@ -3,43 +3,47 @@
   display: flex;
 
   .seccion {
-    width: 50%;
     display: flex;
+    width: 50%;
     flex-direction: column;
 
+
     .btn_react {
-      background-color: blue;
-      width: max-content;
-      padding: 4px 10px;
-      border-radius: 6px;
-      outline: none;
+        background-color: blue;
+        width: max-content;
+        padding: 4px 10px;
+        border-radius: 6px;
+        outline: none;
     }
 
     .border {
-      border: 1px solid #fff;
+        border:  1px solid #fff;
     }
-   
   }
 
 
-  /* img */
   .content_img {
     width: 50%;
+
     > img {
-      width: 100%;
+        width: 100%;
     }
 
-    .borde_azul {
-      filter: drop-shadow(0px 0px 1em #61dafbaa);
-      border: 1px solid #61dafbaa;
-    }
-    .boder_rojo {
-      filter: drop-shadow(0px 0px 1em #ec5151aa);
-      border: 1px solid #ec5151aa;
+
+    .border_azul {
+        filter: drop-shadow(0px 0px 1em #61dafbaa);
+        border: 1px solid blue;
     }
 
-    .cambio_width {
-      width: 90px;
+    .border_rojo {
+        filter: drop-shadow(0px 0px 1em #ec5151aa);
+        border: 1px solid red;
+    }
+
+    .cambio_with {
+        width: 90px;
     }
   }
+
+
 }
